--- a/app/html/index.html
+++ b/app/html/index.html
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white sticky" data-offset="500">
             <div class="container">
-                <a href="index.php" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
+                <a href="index.html" class="navbar-brand">Vincul<span class="text-primary">in.</span></a>
 
                 <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                 <div class="navbar-collapse collapse" id="navbarContent">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="index.php">Inicio</a>
+                            <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="about.html">Acerca de</a>
@@ -168,37 +168,6 @@
 
     <script src="./assets/js/theme.js"></script>
 
-
-
-    <?php
-      
-      // phpinfo();
-      $hostname = "db";
-      $username = "admin";
-      $password = "test";
-      $db = "database";
-
-      $conn = mysqli_connect($hostname,$username,$password,$db);
-      if ($conn->connect_error) {
-        die("Database connection failed: " . $conn->connect_error);
-      }
-
-
-
-    $query = mysqli_query($conn, "SELECT * FROM Usuarios")
-      or die (mysqli_error($conn));
-
-    while ($row = mysqli_fetch_array($query)) {
-      echo
-      "<tr>
-        <td>{$row['id']}</td>
-        <td>{$row['nombre']}</td>
-      </tr>";
-      
-
-    }
-
-    ?>
 </body>
 
 </html>
