--- a/app/html/job-form.html
+++ b/app/html/job-form.html
@@ -95,7 +95,7 @@
                     <div class="row form-group">
                         <div class="col-md-12">
                             <label class="text-black" for="message">Descripción</label>
-                            <textarea name="message" id="message" cols="30" rows="5" class="form-control" placeholder="Escribe aquí la descripción del empleo..."></textarea>
+                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Escribe aquí la descripción del empleo..." name="descripcion"></textarea>
                         </div>
                     </div>
 
