--- a/app/html/password_forgotten.html
+++ b/app/html/password_forgotten.html
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="about.html">Acerca de</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="job-form.html">Publicar empleo</a>
+                            <a class="nav-link" href="job-form.php">Publicar empleo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="jobs.php">Buscar empleo</a>
