--- a/app/html/password_forgotten.html
+++ b/app/html/password_forgotten.html
@@ -79,12 +79,12 @@
                     </div>
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
-                            <input type="submit" value="Restablecer la contraseña" class="btn btn-primary">
+                            <input type="submit" value="Restablecer la contraseña" class="btn btn-secondary">
                         </div>
                     </div>
                     <div class="row form-group mt-4">
                         <div class="col-md-12">
-                            <a class="btn btn-primary" href="login.html">Volver</a>
+                            <a class="btn btn-secondary" href="login.html">Volver</a>
                         </div>
                     </div>
                 </form>
