--- a/app/html/login.html
+++ b/app/html/login.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <script>
-    window.onload = function(){killerSession();}
-    function killerSession(){
-        setTimeout("window.open('logout.php','_top');",60000);
-    } 
+    window.onload = function() {
+        killerSession();
+    }
+
+    function killerSession() {
+        setTimeout("window.open('logout.php','_top');", 60000);
+    }
 </script>
 
 <head>
@@ -44,7 +47,24 @@
 
     </header>
 
-
+    <script type="text/javascript">
+        function mostrarPassword() {
+            var cambio = document.getElementById("contra");
+            if (cambio.type == "password") {
+                cambio.type = "text";
+                $('#show_password #mostrar.mai-eye-off').removeClass("mai-eye-off").addClass("mai-eye");
+            } else {
+                cambio.type = "password";
+                $('#show_password #mostrar.mai-eye').removeClass("mai-eye").addClass("mai-eye-off");
+            }
+        }
+        $(document).ready(function() {
+            //CheckBox mostrar contraseña
+            $('#ShowPassword').click(function() {
+                $('#Password').attr('type', $(this).is(':checked') ? 'text' : 'password');
+            });
+        });
+    </script>
     <div class="text-center">
         <div class="text-center">
             <div class="text-center">
@@ -62,73 +82,73 @@
 
                         <div class="mx-auto" style="width: 500px;">
                             <input type="password" name="contra" class="form-control" placeholder="Contraseña" required="required">
-                            
-                            <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
-                        </div>
-                    </div>
-
-                    <div class="row form-group mt-4">
-                        <div class="col-md-12">
-                            <input type="submit" value="Iniciar sesión" class="btn btn-primary">
-                        </div>
-                    </div>
-                    <div class="row form-group mt-4">
-                        <div class="col-md-12">
-                            ¿Eres nuevo en Vinculin?
-                            <a class="nav-link" href="signup.php">Únete ahora.</a>
-                        </div>
-                    </div>
-                </form>
+                            <button id="show_password" class="btn" type="button" onclick="mostrarPassword()"> <span id='mostrar' class="mai-eye-off"></span> </button>
+                <a class="nav-link" href="password_forgotten.html">¿Has olvidado tu contraseña?</a>
+            </div>
             </div>
 
-        </div>
-    </div>
-    </div>
-
-    <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-lg-3 py-3">
-                    <h3>Vinculin</h3>
-                    <br>
-                    <br>
-
-                    <div class="social-media-button">
-                        <a href="https://github.com/DannyelYankee/Vinculin" target="_blank"><span class="mai-logo-github"></span></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 py-3">
-                    <h5>General</h5>
-                    <ul class="footer-menu">
-                        <li><a href="./about.php">Acerca de</a></li>
-                        <li><a href="./jobs.php">Empleos</a></li>
-                        <li><a href="./signup.php">Regístrate</a></li>
-                    </ul>
-                </div>
-                <div class="col-lg-3 py-3">
-                    <h5>Contáctanos</h5>
-                    <p>Universidad del País Vasco, Ingeniero Torres Quevedo Plaza, 1, 48013 Bilbao, Vizcaya</p>
-                    <p>+34 123 456 78</p>
-                    <a href="mailto:vinculin@inventedmail.com" title="Enviar correo electronico">vinculin@inventedmail.com</a>
+            <div class="row form-group mt-4">
+                <div class="col-md-12">
+                    <input type="submit" value="Iniciar sesión" class="btn btn-primary">
                 </div>
             </div>
+            <div class="row form-group mt-4">
+                <div class="col-md-12">
+                    ¿Eres nuevo en Vinculin?
+                    <a class="nav-link" href="signup.php">Únete ahora.</a>
+                </div>
+            </div>
+            </form>
+            </div>
 
-            <p class="text-center" id="copyright">Copyright &copy; 2020. This template design and develop by <a href="https://macodeid.com/" target="_blank">MACode ID</a></p>
-        </div>
-    </footer>
+            </div>
+            </div>
+            </div>
+
+            <footer class="page-footer bg-image" style="background-image: url(./assets/img/world_pattern.svg);">
+                <div class="container">
+                    <div class="row mb-5">
+                        <div class="col-lg-3 py-3">
+                            <h3>Vinculin</h3>
+                            <br>
+                            <br>
+
+                            <div class="social-media-button">
+                                <a href="https://github.com/DannyelYankee/Vinculin" target="_blank"><span class="mai-logo-github"></span></a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 py-3">
+                            <h5>General</h5>
+                            <ul class="footer-menu">
+                                <li><a href="./about.php">Acerca de</a></li>
+                                <li><a href="./jobs.php">Empleos</a></li>
+                                <li><a href="./signup.php">Regístrate</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-3 py-3">
+                            <h5>Contáctanos</h5>
+                            <p>Universidad del País Vasco, Ingeniero Torres Quevedo Plaza, 1, 48013 Bilbao, Vizcaya</p>
+                            <p>+34 123 456 78</p>
+                            <a href="mailto:vinculin@inventedmail.com" title="Enviar correo electronico">vinculin@inventedmail.com</a>
+                        </div>
+                    </div>
+
+                    <p class="text-center" id="copyright">Copyright &copy; 2020. This template design and develop by <a href="https://macodeid.com/" target="_blank">MACode ID</a></p>
+                </div>
+            </footer>
 
 
-    <script src="./assets/js/jquery-3.5.1.min.js"></script>
+            <script src="./assets/js/jquery-3.5.1.min.js"></script>
 
-    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+            <script src="./assets/js/bootstrap.bundle.min.js"></script>
 
-    <script src="./assets/js/google-maps.js"></script>
+            <script src="./assets/js/google-maps.js"></script>
 
-    <script src="./assets/vendor/wow/wow.min.js"></script>
+            <script src="./assets/vendor/wow/wow.min.js"></script>
 
-    <script src="./assets/js/theme.js"></script>
+            <script src="./assets/js/theme.js"></script>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
+            <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
 
 </body>
 
